--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
     <header id="header">
         <div class="container">
             <nav>
-                <div class="logo">Ravi<span>Shankar</span></div>
+                <div class="logo">Port<span>Folio</span></div>
                 <ul class="nav-links">
                     <li><a href="#hero">Home</a></li>
                     <li><a href="#about">About</a></li>
